Version 0.7.2:
	* Improved some performance;
	* Change some task's margin;
	* Added the project name on title and header;
	* Modal is has now fixed position insted of absolute;

Version 0.7.1:
	* Removed the short tag for compatibility;

	BUG Fix:
		* Removed the test message from the index page;

Version 0.7.0:
	* Adding the log on add task;
	* New style for loading container;
	* Messages container fixed on top;
	* Tasks now only be added on TODO status;
	* Only show make default on non defaults sprints; 

	BUG Fix:
		* Fix some Modal resize issues;
		* Tasks that was only hidden now is really removed from DOM;

Version 0.6.2:
	* Histories only can be added on the active sprint;
	* Resize the Modal if the content is smaller;
	* Some minor layout fix on all Modal pages;
	* Added the option 0 in story estimate;
	* Update the sanitize function;

	BUG Fix: 
		* Translate all Modal pages to english;
		* Fix the remove history problem;	# Issue 9
		* Fix the problem with the active sprint on several teams;
		* Force hidding the inside images from the task after dragging; 

Version 0.6.1:
	* Update jQuery to 1.3.2;
	* Update jQuery UI to 1.7;
	* Added the User Edit feature;
	* Added the sanitize function on every query;

	BUG Fix:
		* Now form are send by POST ( Ops! :P )
		* Add history link doesn't appear without a sprint selected;	# Issue 8

Version 0.6.0:
	* Scroll top for modal and back when close it;
	* Add the edit task option;				# Issue 4
	* Translated the options menu;
	* Add animation to ProgressBar;
	* Add the User managment;
	* Add the task color by user;
	* Parameters to Modal;
	* Color + Icon change in Modal close;

	BUGS Fix:
		* Changed all the form to POST;
		* Fix the background height;		# Issue 3
		* Fix the history remove button;	# Issue 5

Version 0.5.1:
	* Change to jQuery 1.3.1;
	* Several JS improvments;
	* Team selection persistence by cookie;
	* Options menu out off table's thead;
	* Ajax.complete clear the messages;